2013-05-15  Juri Linkov  <juri@jurta.org>

	* isearch.el (minibuffer-local-isearch-map): Bind "\r" to
	`exit-minibuffer' instead of
	`isearch-nonincremental-exit-minibuffer'.
	(isearch-edit-string): Remove mention of
	`isearch-nonincremental-exit-minibuffer' from docstring.
	(isearch-nonincremental-exit-minibuffer): Mark as obsolete.
	(isearch-forward-exit-minibuffer)
	(isearch-reverse-exit-minibuffer): Add docstring.  (Bug#13348)

2013-05-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* loadup.el: Just use unversioned DOC.

	* nxml/nxml-mode.el: Treat unclosed <[[, <?, comment, and other
	literals as extending to EOB.
	(nxml-last-fontify-end): Remove unused variable.
	(nxml-after-change1): Use with-silent-modifications.
	(nxml-extend-after-change-region): Simplify.
	(nxml-extend-after-change-region1): Remove function.
	(nxml-after-change1): Don't adjust for dependent regions.
	(nxml-fontify-matcher): Simplify.
	* nxml/xmltok.el (xmltok-dependent-regions): Remove variable.
	(xmltok-add-dependent): Remove function.
	(xmltok-scan-after-lt, xmltok-scan-after-processing-instruction-open)
	(xmltok-scan-after-comment-open, xmltok-scan-prolog-literal)
	(xmltok-scan-prolog-after-processing-instruction-open): Treat
	unclosed <[[, <?, comment, and other literals as extending to EOB.
	* nxml/rng-valid.el (rng-mark-xmltok-dependent-regions)
	(rng-mark-xmltok-dependent-region, rng-dependent-region-changed):
	Remove functions.
	(rng-do-some-validation-1): Don't mark dependent regions.
	* nxml/nxml-rap.el (nxml-adjust-start-for-dependent-regions)
	(nxml-mark-parse-dependent-regions, nxml-mark-parse-dependent-region)
	(nxml-clear-dependent-regions): Remove functions.
	(nxml-scan-after-change, nxml-scan-prolog, nxml-tokenize-forward)
	(nxml-ensure-scan-up-to-date):
	Don't clear&mark dependent regions.

2013-05-15  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-goto-function-definition):
	Improve and fix callers.
